Prevent row highlight styles from bleeding through to nested tables

--- a/srcjs/react-table.css
+++ b/srcjs/react-table.css
@@ -177,9 +177,6 @@
   -ms-flex-direction: column;
   flex-direction: column;
 }
-.ReactTable.-highlight .rt-tbody .rt-tr:not(.-padRow):hover {
-  background: rgba(0, 0, 0, 0.05);
-}
 .ReactTable .rt-noData {
   display: block;
   position: absolute;
